# docscript

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.ds  README_ZH.ds
docs/: builtin_proc.txt  changelog.txt  lexical.txt  specialform.txt
docs/next/: datatype.txt  stdproc.txt
docsir/: CMakeLists.txt
docsir/include/docsir/: utility.h  version.h
docsir/include/docsir/commands/: eval.h  exec.h  repl.h  version.h
docsir/src/: docsir.cpp
document/: changelog.txt  garmmar2.txt  grammar.txt  interpreter.txt  specialform.txt  stdproc.txt
dslib/: markdown.ds
include/: docscript.h
include/docsir/: datatype.h  datatype_list.h  environment.h  exception.h  interpreter.h  stdproc.h  stdproc_ext.h  value.h
include/docsir/commands/: eval.h  repl.h  version.h
include/libdocscript/: ast.h  exception.h  libdocscript.h  misc.h  parser.h  token.h  tokenstream.h  version.h
include/libdocscript/ast/: atom.h  comment.h  list.h  node.h  quote.h  sexpr.h  text.h
include/libdocscript/proc/: utility.h
include/libdocscript/runtime/: environment.h  list.h  procedure.h  specialform.h
include/libdocscript/utility/: position.h  stringstream.h
libdocscript/: CMakeLists.txt
libdocscript/include/libdocscript/: exception.h  interpreter.h  parser.h  scanner.h  token.h  version.h
libdocscript/include/libdocscript/ast/: ast.h  atom.h  expression.h  list.h
libdocscript/include/libdocscript/proc/: builtin.h  utility.h
libdocscript/include/libdocscript/runtime/: datatype.h  environment.h  list.h  macro.h  macro_expander.h  procedure.h  specialform.h  value.h
libdocscript/include/libdocscript/utility/: position.h  stringstream.h
libdocscript/src/: interpreter.cpp  parser.cpp  scanner.cpp
libdocscript/src/ast/: ast_node.cpp  atom.cpp  atom_helper.cpp  expression.cpp  list.cpp
libdocscript/src/proc/: utility.cpp
libdocscript/src/proc/builtin/: boolean.cpp  equivalence.cpp  error.cpp  list.cpp  nil.cpp  number.cpp  procedure.cpp  string.cpp  symbol.cpp
libdocscript/src/runtime/: datatype.cpp  environment.cpp  list.cpp  macro.cpp  macro_expander.cpp  procedure.cpp  specialform.cpp  value.cpp
libdocscript/src/runtime/datatype/: boolean.cpp  error.cpp  nil.cpp  number.cpp  string.cpp  symbol.cpp  unspecific.cpp
libdocscript/src/runtime/environment/: initialize_environment.cpp
libdocscript/src/runtime/procedure/: builtin_procedure.cpp  lambda_procedure.cpp
libdocscript/src/runtime/specialform/: define.cpp  define_macro.cpp  if_else.cpp  lambda.cpp  logic_and.cpp  logic_or.cpp  quasiquote.cpp  quote.cpp  set.cpp  unquote.cpp  unquote_splicing.cpp
libdocscript/src/scanner/: mode_adapter.cpp  normal_mode.cpp  text_mode.cpp
libdocscript/src/utility/: stringstream.cpp
src/: CMakeLists.txt
src/docsir/: CMakeLists.txt  docsir.cpp  interpreter.cpp  stdproc.cpp  stdproc_ext.cpp  stdproc_list.cpp  stdproc_num.cpp  stdproc_str.cpp  value.cpp
src/libdocscript/: CMakeLists.txt  interpreter.cpp  parser.cpp  tokenstream.cpp
src/libdocscript/ast/: atom.cpp  atom_helper.cpp  list.cpp  node.cpp  sexpr.cpp
src/libdocscript/proc/: utility.cpp
src/libdocscript/proc/builtin/: boolean.cpp  error.cpp  load.cpp  procedure.cpp  stdio.cpp  string.cpp
src/libdocscript/runtime/: datatype.cpp  environment.cpp  macro.cpp  macro_expander.cpp
src/libdocscript/runtime/datatype/: string.cpp
src/libdocscript/runtime/procedure/: lambda_procedure.cpp
src/libdocscript/runtime/specialform/: define.cpp  logic_or.cpp  quasiquote.cpp  quote.cpp  set.cpp  unquote.cpp
src/libdocscript/scanner/: mode_adapter.cpp
src/libdocscript/utility/: stringstream.cpp
